# swagger-output.json
@@ -1041,7 +1041,7 @@
                 "post_id": {
                   "example": "any"
                 },
-                "days": {
+                "expiration_day": {
                   "example": "any"
                 }
               }
@@ -1059,6 +1059,32 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Ads post"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "description": "lấy các gói",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           },
           "500": {
             "description": "Internal Server Error"
